--- a/0x02-CSS_advanced/styles/7-style.css
+++ b/0x02-CSS_advanced/styles/7-style.css
@@ -5,8 +5,8 @@
     --color-light-grey: #f3f3f3;
     --color-dark-grey: #353535;
     --text-color: var(--color-black);
-    --font-famyli-base: 'Helvatica Neue', Helvatica, Arial, sans-serif, Open Sans;
-    --font-family-title: 'Helvatica Neue', Helvatica, Arial, sans-serif, Raleway;
+    --font-famyli-base: 'Open Sans', 'Helvatica Neue', Helvatica, Arial, sans-serif ;
+    --font-family-title: Raleway, 'Helvatica Neue', Helvatica, Arial, sans-serif;
     --font-size-small: 1.2rem;
     --font-size-medium: 1.6rem;
     --font-size-large: 1.8rem;
