--- a/0x02-CSS_advanced/styles/4-style.css
+++ b/0x02-CSS_advanced/styles/4-style.css
@@ -1,33 +1,29 @@
-:root{
+:root {
     --color-primary: #d73953;
     --color-black: #090909;
     --color-white: #ffffff;
     --color-light-grey: #f3f3f3;
     --color-dark-grey: #353535;
     --text-color: var(--color-black);
-    --font-famyli-base: 'Helvatica Neue', Helvatica, Arial, sans-serif;
-    --font-family-title: 'Helvatica Neue', Helvatica, Arial, sans-serif;
+    --font-family-base: "Helvetica Neue", Helvetica, Arial, sans-serif;
+    --font-family-title: "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
+
 html {
     scroll-behavior: smooth;
 }
 
 body {
     color: var(--text-color);
-    font-family: var(--font-famyli-base);
+    font-family: var(--font-family-base);
 }
 
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
+h1, h2, h3, h4, h5, h6 {
     font-family: var(--font-family-title);
 }
 
 a {
-    color: #161616;
+    color: var(--text-color);
 }
 
 .visually-hidden {
