--- a/0x03-sass_scss/1-color_variables.scss
+++ b/0x03-sass_scss/1-color_variables.scss
@@ -1,8 +1,10 @@
 /* Sass file that assigns the text color #3D3D3D to the HTML tags body and p */
+$color-body-and-p: #3D3D3D;
+
 body {
-    color: #3D3D3D;
+    color: $color-body-and-p;
 }
 
 p {
-    color: #3D3D3D;
+    color: $color-body-and-p;
 }
