--- a/2-color_variables.scss
+++ b/2-color_variables.scss
@@ -9,13 +9,10 @@ $color-body-h2: #6D6D6D;
 
 body {
     color: $color-body-and-p;
-    background-color: $color-body-h2;
-}
+    background-color: $color-body-h2; }
 
 p {
-    color: $color-body-and-p;
-}
+    color: $color-body-and-p; }
 
 h2 {
-    background-color: $color-body-h2;
-}
+    background-color: $color-body-h2; }
