--- a/0x03-sass_scss/8-mixin_margins.scss
+++ b/0x03-sass_scss/8-mixin_margins.scss
@@ -3,3 +3,11 @@
 Margin left and right at 10px to body tags
 Margin left and right at 15px to div tags
 You must use a mixin */
+
+@mixin body {
+    margin: 0 10px;
+}
+
+@mixin div {
+    margin: 0 15px;
+}
