--- a/0x03-sass_scss/8-mixin_margins.scss
+++ b/0x03-sass_scss/8-mixin_margins.scss
@@ -10,9 +10,9 @@ You must use a mixin */
 }
 
 body {
-    @include margin(10px)
+    @include margin(10px);
 }
 
 div {
-    @include margin(15px)
+    @include margin(15px);
 }
